--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Tools</title>
-        <link rel="icon" type="image/x-icon" href="./img/heart.png">
+        <link rel="icon" type="image/x-icon" href="./img/heart.png" />
         <style>
             /* From extension vscode.github */
             /*---------------------------------------------------------------------------------------------
@@ -2482,8 +2482,8 @@ hue-6-2: #e6c07b
         <p align="center">
             <a href="https://github.com/ngnducnhat/tools-and-tricks">
                 <img
-                src="https://github-readme-stats.vercel.app/api/pin/?username=ngnducnhat&repo=tools&theme=dark"
-            />
+                    src="https://github-readme-stats.vercel.app/api/pin/?username=ngnducnhat&repo=tools-and-tricks"
+                />
             </a>
         </p>
         <button onclick="toggleTheme()">Dark mode</button>
@@ -2533,17 +2533,18 @@ hue-6-2: #e6c07b
         </style>
         <p align="center">
             <img
-                src="https://img.shields.io/github/forks/ngnducnhat/tools?style=flat-square"
+                src="https://img.shields.io/github/forks/ngnducnhat/tools-and-tricks?style=flat-square"
             />
             <img
-                src="https://img.shields.io/github/stars/ngnducnhat/tools?color=yellow&style=flat-square"
+                src="https://img.shields.io/github/stars/ngnducnhat/tools-and-tricks?color=yellow&style=flat-square"
             />
         </p>
 
         <h1 id="tools">Tools</h1>
         <h2 id="i-tools">
             I.
-            <a href="https://github.com/ngnducnhat/tools/releases/tag/tool"
+            <a
+                href="https://github.com/ngnducnhat/tools-and-tricks/releases/tag/tools"
                 >Tools</a
             >
         </h2>
@@ -2559,7 +2560,7 @@ hue-6-2: #e6c07b
                     <td>
                         1.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/Cloudflare_WARP_Release-x64.msi"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/Cloudflare_WARP_Release-x64.msi"
                             >1.1.1.1</a
                         >
                     </td>
@@ -2569,7 +2570,7 @@ hue-6-2: #e6c07b
                     <td>
                         2.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/3uTools_v2.63.003_Setup.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/3uTools_v2.63.003_Setup.exe"
                             >3utool</a
                         >
                     </td>
@@ -2579,7 +2580,7 @@ hue-6-2: #e6c07b
                     <td>
                         3.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/7zip.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/7zip.exe"
                             >7zip</a
                         >
                     </td>
@@ -2593,7 +2594,7 @@ hue-6-2: #e6c07b
                     <td>
                         4.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/Audio_Realtek_6.0.1.8378_W10x64_A.zip"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/Audio_Realtek_6.0.1.8378_W10x64_A.zip"
                             >Audio Driver</a
                         >
                     </td>
@@ -2603,7 +2604,7 @@ hue-6-2: #e6c07b
                     <td>
                         5.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/ChromeSetup.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/ChromeSetup.exe"
                             >Chrome</a
                         >
                     </td>
@@ -2617,7 +2618,7 @@ hue-6-2: #e6c07b
                     <td>
                         6.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/Ccleansetup588.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/ccsetup609.exe"
                             >Ccleaner</a
                         >
                     </td>
@@ -2631,7 +2632,7 @@ hue-6-2: #e6c07b
                     <td>
                         7.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/cru-1.5.2.rar"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/cru-1.5.2.rar"
                             >Cru - Overclock display</a
                         >
                     </td>
@@ -2641,7 +2642,7 @@ hue-6-2: #e6c07b
                     <td>
                         8.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/DiscordSetup.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/DiscordSetup.exe"
                             >Discord</a
                         >
                     </td>
@@ -2653,7 +2654,7 @@ hue-6-2: #e6c07b
                     <td>
                         9.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/Driver.Booster.9.2.0.178.rar"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/Driver.Booster.9.2.0.178.rar"
                             >Driver Booster</a
                         >
                     </td>
@@ -2663,7 +2664,7 @@ hue-6-2: #e6c07b
                     <td>
                         10.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/GoogleDriveSetup.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/GoogleDriveSetup.exe"
                             >Drive Destop</a
                         >
                     </td>
@@ -2677,7 +2678,7 @@ hue-6-2: #e6c07b
                     <td>
                         11.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/lghub_installer.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/lghub_installer.exe"
                             >G Hub</a
                         >
                     </td>
@@ -2692,7 +2693,7 @@ hue-6-2: #e6c07b
                     <td>
                         12.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/IDM.rar"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/IDM.Retail.v6.41.build.6.incl.Patcher_LinkNeverDie.Com.rar"
                             >IDM</a
                         >
                     </td>
@@ -2706,7 +2707,7 @@ hue-6-2: #e6c07b
                     <td>
                         13.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/k-lite-codec-pack-full_1730.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/k-lite-codec-pack-full_1730.exe"
                             >K lite</a
                         >
                     </td>
@@ -2716,7 +2717,7 @@ hue-6-2: #e6c07b
                     <td>
                         14.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/MobaXterm_Installer_v21.5.zip"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/MobaXterm_Installer_v21.5.zip"
                             >MobaXterm</a
                         >
                     </td>
@@ -2730,7 +2731,7 @@ hue-6-2: #e6c07b
                     <td>
                         15.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/nox_setup_v7.0.5.0_full_intl.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/nox_setup_v7.0.5.0_full_intl.exe"
                             >Nox</a
                         >
                     </td>
@@ -2744,7 +2745,7 @@ hue-6-2: #e6c07b
                     <td>
                         16.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/OBS-Studio-28.1.2-Full-Installer-x64.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/OBS-Studio-28.1.2-Full-Installer-x64.exe"
                             >OBS</a
                         >
                     </td>
@@ -2758,7 +2759,7 @@ hue-6-2: #e6c07b
                     <td>
                         17.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/rufus-3.21.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/rufus-3.21.exe"
                             >Rufus</a
                         >
                     </td>
@@ -2768,7 +2769,7 @@ hue-6-2: #e6c07b
                     <td>
                         18.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/UltraViewer_setup_6.6_vi.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/UltraViewer_setup_6.6_vi.exe"
                             >Ultra View</a
                         >
                     </td>
@@ -2782,7 +2783,7 @@ hue-6-2: #e6c07b
                     <td>
                         19.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/UniKeyNT.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/UniKeyNT.exe"
                             >Unikey</a
                         >
                     </td>
@@ -2794,7 +2795,7 @@ hue-6-2: #e6c07b
                     <td>
                         20.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/VC_redist.x64.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/VC_redist.x64.exe"
                             >Virtual C++</a
                         >
                     </td>
@@ -2804,7 +2805,7 @@ hue-6-2: #e6c07b
                     <td>
                         21.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/VMware-workstation-full-16.2.1-18811642.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/VMware-workstation-full-16.2.1-18811642.exe"
                             >VMware 16</a
                         >
                     </td>
@@ -2814,7 +2815,7 @@ hue-6-2: #e6c07b
                     <td>
                         22.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/VSCodeUserSetup-x64-1.63.1.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/VSCodeUserSetup-x64-1.63.1.exe"
                             >VS Code</a
                         >
                     </td>
@@ -2828,7 +2829,7 @@ hue-6-2: #e6c07b
                     <td>
                         23.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/tool/Winrar_x64_6.0.2.zip"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/tools/Winrar_x64_6.0.2.zip"
                             >Winrar</a
                         >
                     </td>
@@ -2842,7 +2843,8 @@ hue-6-2: #e6c07b
         </table>
         <h2 id="ii-adobe">
             II.
-            <a href="https://github.com/ngnducnhat/tools/releases/tag/adobe"
+            <a
+                href="https://github.com/ngnducnhat/tools-and-tricks/releases/tag/adobe"
                 >Adobe</a
             >
         </h2>
@@ -2857,7 +2859,7 @@ hue-6-2: #e6c07b
                     <td>
                         1.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/adobe/Adobe.After.Effects.2022.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/adobe/Adobe.After.Effects.2022.exe"
                             >After Effects CC 2022</a
                         >
                     </td>
@@ -2866,7 +2868,7 @@ hue-6-2: #e6c07b
                     <td>
                         2.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/adobe/Adobe.Premiere.Pro.2022.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/adobe/Adobe.Premiere.Pro.2022.exe"
                             >Premiere Pro CC 2022</a
                         >
                     </td>
@@ -2875,7 +2877,7 @@ hue-6-2: #e6c07b
                     <td>
                         3.
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/adobe/Adobe.Photoshop.2022.exe"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/adobe/Adobe.Photoshop.2022.exe"
                             >Photoshop CC 2022</a
                         >
                     </td>
@@ -2884,7 +2886,8 @@ hue-6-2: #e6c07b
         </table>
         <h2 id="iii-game">
             III.
-            <a href="https://github.com/ngnducnhat/tools/releases/tag/game"
+            <a
+                href="https://github.com/ngnducnhat/tools-and-tricks/releases/tag/game"
                 >Game</a
             >
         </h2>
@@ -2947,7 +2950,7 @@ hue-6-2: #e6c07b
                 <tr>
                     <td>
                         <a
-                            href="https://github.com/ngnducnhat/tools/releases/download/game/cfg.zip"
+                            href="https://github.com/ngnducnhat/tools-and-tricks/releases/download/game/cfg.zip"
                             >12-02-2023</a
                         >
                     </td>
